--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,19 +3,38 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.tests {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1rem;
+}
+
+.tests label:last-child {
+    grid-column-start: 2;
+}
+
+button {
+    /* prevent button to expand all the way horizantally in grid*/
+    align-self: center;
+
 }
 
 @keyframes logo-spin {
@@ -33,10 +52,3 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
