--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -46,9 +46,15 @@ button {
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+@media (max-width: 1250px) {
+    h1 {
+      font-size: 2.4em;
+    }
 
+    .tests {
+        display: flex;
+        flex-direction: column;
+
+    }
+      
+  }
