--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,7 @@
 body {
   margin: 0;
   display: flex;
+  max-width: 100vw;
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
